Version 1.0.4 released August 1, 2018

    - Fixed "unexpected character" bug when line ends with QUOTE, CR
    - Added "-X" flag to derive XML tag names from column headers

Version 1.0.3 (r32) released January 5, 2013

    - Add support for converting XML back to CSV
    - Add `-e' flag to set input character encoding
    - Escape CR characters in XML output
    - Fixed glitches in man page

Version 1.0.2 (r25) released August 25, 2012

    - Allow backslash escapes for `-s' and `-q' flags
    - Accept files that lack a terminating newline
    - Accept CR, LF, or CR-LF line endings

Version 1.0.1 (r17) released March 9, 2012

    - Fix bug where `-s' flag did not function (Issue #1)
    - Document '%0$' specifier in man page

Version 1.0 (r4) released November 30, 2010

    - Initial release
